<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Safety</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Edit Profile</string>
  	<string name="starting_logo">Starting Logo</string>
  	<string name="name_hint_text">Ur Name</string>
  	<string name="email_hint_text">Email Address</string>
  	<string name="mobile_hint_text">Enter Ur Mobile No</string>
  	<string name="terms_text">I accept terms &amp; conditions.</string>
  	<string name="submit_button_label">Submit</string>
  	<string name="profile_page_label">Create Profile</string>
  	<string name="button1_label">Set Route</string>
  	<string name="button2_lable">SOS</string>
  	<string name="destination_lable">Destination:</string>
  	<string name="pref_sync">Destination:</string>
  	<string name="pref_sync_summ">Destination:</string>
  	<string name="pref_syncConnectionType">Destination:</string>

  	<string name="pref_syncConnectionTypes_default">Destination:</string>
  	
</resources>
